--- a/translations/en/invoice_template.txt
+++ b/translations/en/invoice_template.txt
@@ -80,7 +80,7 @@
     <tr><td>
         &nbsp;
     </td><td>
-        21% VAT&nbsp;&nbsp;&nbsp;€ 
+        VAT&nbsp;&nbsp;&nbsp;€ 
     </td><td>
         {{invoice.vat|formatNumber(2,44,0)}}
     </td></tr>
