--- a/translations/en/invoice_template.txt
+++ b/translations/en/invoice_template.txt
@@ -53,6 +53,8 @@
     <tr><td>
         {{line.name|capitalize}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td><td>
+        {{line.vat_percentage}} VAT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    </td><td>
         € 
     </td><td>
         {{line.subtotal|formatNumber(2,44,0)}}
@@ -60,6 +62,8 @@
 {{endfor}}
 {{if:invoice.multiLine}}
     <tr><td>
+        &nbsp;
+    </td><td>
         &nbsp;
     </td><td>
         Subtotal&nbsp;&nbsp;&nbsp;€ 
@@ -71,7 +75,9 @@
     <tr><td>
         &nbsp;
     </td><td>
-            
+        &nbsp;
+    </td><td>
+        &nbsp;
     </td><td>
         VAT reverse charge
     </td></tr>
@@ -80,12 +86,16 @@
     <tr><td>
         &nbsp;
     </td><td>
+        &nbsp;
+    </td><td>
         VAT&nbsp;&nbsp;&nbsp;€ 
     </td><td>
         {{invoice.vat|formatNumber(2,44,0)}}
     </td></tr>
 {{endif}}
 <tr><td>
+    &nbsp;
+</td><td>
     &nbsp;
 </td><td>
     Total&nbsp;&nbsp;&nbsp;€ 
