--- a/translations/en/invoice_template.txt
+++ b/translations/en/invoice_template.txt
@@ -112,22 +112,20 @@
     in {{company.bank_city}}. Please specify the invoice number.<br>
 {{endif}}
 {{if:invoice.reminder|eq(1)}}
-    Uit onze administratie is gebleken dat bovenstaande factuur nog niet is voldaan. 
-    De betalingstermijn van deze factuur is {{company.payment_period}} dagen. Deze termijn is reeds verstreken.<br>
+    We write to inform you that we have not yet received payment of the invoice above.
+    The term of payment for this invoice is {{company.payment_period}} days. That period has expired.<br>
     <br>
-    Wij verzoeken u daarom om uiterlijk op <b>{{company.reminder_period|relativeDate|formatDate(j F Y)|translateMonth(nl)}}</b> het
-    openstaande factuurbedrag over gemaakt te hebben op IBAN {{company.bank_account_number}} ({{company.bank_name}}) 
-    <b>t.n.v. {{company.bank_account_name}}</b> in {{company.bank_city}}, onder vermelding van het factuurnummer.<br>
+    Therefore we ask you to transfer this oustanding invoice in full, not later than <b>{{company.reminder_period|relativeDate|formatDate(j F Y)|translateMonth(nl)}}</b>, 
+    at IBAN {{company.bank_account_number}} ({{company.bank_name}}) <b>att. {{company.bank_account_name}}</b> in {{company.bank_city}}. Please specify the invoice number.<br>
 {{endif}}
 {{if:invoice.reminder|eq(2)}}
-    Uit onze administratie is gebleken dat bovenstaande factuur nog niet is voldaan. 
-    De betalingstermijn van deze factuur is {{company.payment_period}} dagen. Deze termijn is reeds verstreken.<br>
+    We write to inform you that we have not yet received payment of the invoice above.
+    The term of payment for this invoice is {{company.payment_period}} days. That period has expired.<br>
     <br>
-    Wij verzoeken u daarom om uiterlijk op <b>{{company.reminder_period|relativeDate|formatDate(j F Y)|translateMonth(nl)}}</b> het
-    openstaande factuurbedrag over gemaakt te hebben op IBAN {{company.bank_account_number}} ({{company.bank_name}}) 
-    <b>t.n.v. {{company.bank_account_name}}</b> in {{company.bank_city}}, onder vermelding van het factuurnummer.<br>
+    Therefore we ask you to transfer this oustanding invoice in full, not later than <b>{{company.reminder_period|relativeDate|formatDate(j F Y)|translateMonth(nl)}}</b>, 
+    at IBAN {{company.bank_account_number}} ({{company.bank_name}}) <b>att. {{company.bank_account_name}}</b> in {{company.bank_city}}. Please specify the invoice number.<br>
     <br>
-    Mocht uw betaling reeds onderweg zijn, dan verzoeken wij u deze herinnering als niet geschreven te beschouwen.<br>
+    Should you have settled the account since this mail was written, please ignore our reminder.<br>
 {{endif}}
 <br>
 <br>
