--- a/translations/en/invoice_template.txt
+++ b/translations/en/invoice_template.txt
@@ -16,7 +16,7 @@
     att. {{company.bank_account_name}}<br>
     BIC: {{company.bank_bic}}<br>
     CoC: {{company.coc_number}}<br>
-    VAT: {{company.vat_number}}<br>                
+    tax: {{company.tax_number}}<br>                
 </td></tr></table>
 <br>
 <br>
@@ -53,7 +53,7 @@
     <tr><td>
         {{line.name|capitalize}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td><td>
-        {{line.vat_percentage}} VAT&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        {{line.tax_percentage}} tax&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td><td>
         € 
     </td><td>
@@ -71,7 +71,7 @@
         {{invoice.subtotal|formatNumber(2,44,0)}}
     </td></tr>
 {{endif}}
-{{if:customer.vat_reverse_charge}}
+{{if:customer.tax_reverse_charge}}
     <tr><td>
         &nbsp;
     </td><td>
@@ -79,18 +79,18 @@
     </td><td>
         &nbsp;
     </td><td>
-        VAT reverse charge
+        tax reverse charge
     </td></tr>
 {{endif}}
-{{if:customer.vat_reverse_charge|eq(0)}}
+{{if:customer.tax_reverse_charge|eq(0)}}
     <tr><td>
         &nbsp;
     </td><td>
         &nbsp;
     </td><td>
-        VAT&nbsp;&nbsp;&nbsp;€ 
+        tax&nbsp;&nbsp;&nbsp;€ 
     </td><td>
-        {{invoice.vat|formatNumber(2,44,0)}}
+        {{invoice.tax|formatNumber(2,44,0)}}
     </td></tr>
 {{endif}}
 <tr><td>
