--- a/translations/nl/invoice_template.txt
+++ b/translations/nl/invoice_template.txt
@@ -53,17 +53,13 @@
     <tr><td>
         {{line.name|capitalize}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     </td><td>
-        {{line.tax_percentage}} BTW&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    </td><td>
-        € 
+        {{line.tax_percentage}}% BTW&nbsp;&nbsp;&nbsp;€ 
     </td><td>
         {{line.subtotal|formatNumber(2,44,0)}}
     </td></tr>
 {{endfor}}
 {{if:invoice.multiLine}}
     <tr><td>
-        &nbsp;
-    </td><td>
         &nbsp;
     </td><td>
         Subtotaal&nbsp;&nbsp;&nbsp;€ 
@@ -77,15 +73,11 @@
     </td><td>
         &nbsp;
     </td><td>
-        &nbsp;
-    </td><td>
         BTW VERLEGD
     </td></tr>
 {{endif}}
 {{if:customer.tax_reverse_charge|eq(0)}}
     <tr><td>
-        &nbsp;
-    </td><td>
         &nbsp;
     </td><td>
         BTW&nbsp;&nbsp;&nbsp;€ 
@@ -94,8 +86,6 @@
     </td></tr>
 {{endif}}
 <tr><td>
-    &nbsp;
-</td><td>
     &nbsp;
 </td><td>
     Totaal&nbsp;&nbsp;&nbsp;€ 
