--- a/translations/en/invoiceline_template.txt
+++ b/translations/en/invoiceline_template.txt
@@ -5,5 +5,5 @@
     {{delivery.name}}
 {{endif}}
 {{if:type|eq(subscription)}}
-    {{subscription.name}} from {{subscriptionperiod.from|formatDate(j F Y)|translateMonth(nl)}} to {{subscriptionperiod.until|formatDate(j F Y)|translateMonth(nl)}}
+    {{subscription.name}} from {{subscriptionperiod.from|formatDate(j F Y)|translateMonth(en)}} to {{subscriptionperiod.until|formatDate(j F Y)|translateMonth(en)}}
 {{endif}}
